fixed nav spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -168,10 +168,6 @@ td {
 }
 
 
-.navpanel {
-  justify-content: space-between;
-  box-sizing: border-box;
-}
 
 
 .carousel-text {
